feat: Configuração da paginação dos tópicos para melhorias no UX do projeto e adicionando função de comece agora na página inicial

--- a/class01/home/templates/topico.html
+++ b/class01/home/templates/topico.html
@@ -2,32 +2,32 @@
 {% load static tailwind_tags %}
 <html lang="en">
 <head>
-    <title>{% block title %} - {{ topico.nome_topico }} {% endblock %}</title>
+    <title>{% block title %} - {{ topic_list.nome_topico }} {% endblock %}</title>
     {% tailwind_css %}
 </head>
 <body class="flex items-center justify-center">
     
     {% block content %}
 
-        <h1 class="text-5xl font-bold text-center my-9">{{ topico.nome_topico }}</h1>
+        <h1 class="text-5xl font-bold text-center my-9">{{ current_topic.nome_topico }}</h1>
 
-        <p class="w-1/2 mx-auto mb-4">{{ topico.introducao }}</p>
+        <p class="w-1/2 mx-auto mb-4">{{ current_topic.introducao }}</p>
 
-        <img class="w-1/2 mx-auto mb-6 rounded-2xl" src="{{ topico.imagem.url }}" alt="{{ topico.nome_topico }}">
+        <img class="w-1/2 mx-auto mb-6 rounded-2xl" src="{{ current_topic.imagem.url }}" alt="{{ current_topic.nome_topico }}">
 
         <div class="flex justify-center my-5">
-            <a target="_blank" href="{{ topico.fonte }}">
+            <a target="_blank" href="{{ current_topic.fonte }}">
                 <button class="px-4 py-2 overflow-hidden font-medium text-blue-400 duration-300 bg-black border border-b-4 border-blue-400 rounded-md outline-none hover:brightness-150 hover:border-t-4 hover:border-b active:opacity-75 group">
                     <span class="bg-blue-400 shadow-blue-400 absolute -top-[150%] left-0 inline-flex w-80 h-[5px] rounded-md opacity-50 group-hover:top-[150%] duration-500 shadow-[0_0_10px_10px_rgba(0,0,0,0.3)]"></span>
-                    Veja mais sobre {{ topico.nome_topico }}
+                    Veja mais sobre {{ current_topic.nome_topico }}
                 </button>
             </a>
         </div>
 
-        <p class="w-1/2 mx-auto mb-4">{{ topico.texto_ferramenta }}</p>
+        <p class="w-1/2 mx-auto mb-4">{{ current_topic.texto_ferramenta }}</p>
         
         <div class="flex justify-center mb-5">
-            <a href="{{ topico.fonte_ferramenta }}" target="_blank">
+            <a href="{{ current_topic.fonte_ferramenta }}" target="_blank">
                 <button class="px-4 py-2 overflow-hidden font-medium text-blue-400 duration-300 bg-black border border-b-4 border-blue-400 rounded-md outline-none hover:brightness-150 hover:border-t-4 hover:border-b active:opacity-75 group">
                     <span class="bg-blue-400 shadow-blue-400 absolute -top-[150%] left-0 inline-flex w-80 h-[5px] rounded-md opacity-50 group-hover:top-[150%] duration-500 shadow-[0_0_10px_10px_rgba(0,0,0,0.3)]"></span>
                     Veja mais sobre as principais ferramentas
@@ -35,26 +35,27 @@
             </a>
         </div>
 
-        {% for ferramenta in topico.ferramenta_set.all %}
-            <div class="mb-4">
-                <h3 class="mb-2 text-3xl font-bold text-center">{{ ferramenta.nome_ferramenta }}</h3>
-
-                <img class="w-1/2 mx-auto mb-6 rounded-2xl" src="{{ ferramenta.imagem_ferramenta.url }}" alt="{{ ferramenta.nome_ferramenta }}">
-
-                <p class="w-1/2 mx-auto mb-4">{{ ferramenta.informacao_ferramenta }}</p>
-
-                <div class="flex justify-center">
-                    <a target="_blank" href="{{ ferramenta.link_ferramenta }}">
-                        <button class="px-4 py-2 overflow-hidden font-medium text-blue-400 duration-300 bg-black border border-b-4 border-blue-400 rounded-md outline-none hover:brightness-150 hover:border-t-4 hover:border-b active:opacity-75 group">
-                            <span class="bg-blue-400 shadow-blue-400 absolute -top-[150%] left-0 inline-flex w-80 h-[5px] rounded-md opacity-50 group-hover:top-[150%] duration-500 shadow-[0_0_10px_10px_rgba(0,0,0,0.3)]"></span>
-                            Veja mais sobre {{ ferramenta.nome_ferramenta }}
+        {% for ferramenta in ferramentas %}
+        <div class="px-4 py-8 mx-auto mb-8 bg-slate-700 rounded-3xl sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
+            <div class="flex flex-col items-center justify-between w-full mb-10 lg:flex-row">
+                <div class="mb-16 lg:mb-0 lg:max-w-lg lg:pr-5">
+                    <div class="max-w-xl mb-6">
+                  
+                        <h2 class="max-w-lg mt-6 mb-6 font-sans text-3xl font-medium tracking-tight text-white sm:mt-0 sm:text-4xl sm:leading-none">{{ ferramenta.nome_ferramenta }}</h2>
+                        <p class="w-10/12 text-base text-white md:text-lg">{{ ferramenta.informacao_ferramenta }}</p>
+                    </div>
+                    <div className='space-x-4'>
+                        <button class="inline-flex items-center text-lg font-medium text-neutral-400">
+                            <span> get insights →</span>
                         </button>
-                    </a>
+                    </div>
                 </div>
-
+                <img alt="logo" width="750" height="750" src="{{ ferramenta.imagem_ferramenta.url }}" />
             </div>
-
+        </div>
         {% endfor %}
+
+        {% include 'pagination.html' %}
 
     {% endblock %}
 
