--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -14,7 +14,9 @@
             <div class="flex flex-col w-1/3 mx-10 mb-16 sm:w-4/5">
                 <p class="mx-10 mt-2 mb-auto text-lg font-semibold text-left text-wrap">No Class01, acreditamos que a tecnologia é a chave para o futuro. Nosso objetivo é proporcionar a você o melhor conteúdo tecnológico, focado em programação e suas diversas vertentes. Aqui, você encontrará um vasto acervo de recursos essenciais para aprimorar suas habilidades e expandir seu conhecimento na área.</p>
 
-                <button type="submit" class="px-4 py-2 mx-10 mt-10 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 sm:mx-auto">Comece agora</button>
+                <a href="{% url 'exibir_topico' 1 %}">
+                    <button type="submit" class="px-4 py-2 mx-10 mt-10 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 sm:mx-auto">Comece agora</button>
+                </a>
             </div>
 
             <img class="w-1/2 h-auto rounded-xl" src="../img/Webinar-rafiki.png" alt="aprendiz de programação">
