--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -8,27 +8,29 @@
     
     {% block content %}
 
-        <h1 class="mt-3 mb-5 text-4xl font-bold text-center sm:w-2/3 sm:mx-auto">Bem-vindo ao Class01: Seu Portal de Conteúdos Tecnológicos!</h1>
-
-        <div class="flex items-center mt-10 lg:flex-row sm:flex-col">
+        <div class="flex items-center w-10/12 mx-auto mt-10 lg:flex-row sm:flex-col">
             <div class="flex flex-col w-1/3 mx-10 mb-16 sm:w-4/5">
-                <p class="mx-10 mt-2 mb-auto text-lg font-semibold text-left text-wrap">No Class01, acreditamos que a tecnologia é a chave para o futuro. Nosso objetivo é proporcionar a você o melhor conteúdo tecnológico, focado em programação e suas diversas vertentes. Aqui, você encontrará um vasto acervo de recursos essenciais para aprimorar suas habilidades e expandir seu conhecimento na área.</p>
+                <h1 class="text-4xl font-medium">Desbloqueie seu potencial de programação!</h1>
+                <p class="mt-2 mb-auto text-lg text-left text-wrap">Explore os fundamentos da programação e inicie sua jornada dentro da indústria tech.</p>
 
-                <a href="{% url 'exibir_topico' 1 %}">
-                    <button type="submit" class="px-4 py-2 mx-10 mt-10 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 sm:mx-auto">Comece agora</button>
-                </a>
+                    <div>
+                        <button type="submit" class="px-4 py-2 mt-10 text-sm font-medium text-center text-blue-700 bg-white rounded-lg hover:bg-blue-100 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-white dark:hover:bg-blue-100 dark:focus:ring-blue-800"><a href="{% url 'exibir_topico' 1 %}">Comece agora</a></button>
+                        
+                        <button type="submit" class="px-4 py-2 mt-10 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"><a href="{% url 'exibir_topico' 1 %}">Fale conosco</a></button>
+                    </div>
             </div>
 
             <img class="w-1/2 h-auto rounded-xl" src="../img/Webinar-rafiki.png" alt="aprendiz de programação">
         </div>
 
-        <section id="topics" class="m-20 mx-auto ">
-            <h2 class="text-3xl text-center">Conheça nossos conteúdos</h2>
+        <section id="topics" class="py-20 mx-auto">
+            <h2 class="my-5 text-4xl font-medium text-center">Explore programming topics</h2>
+            <p class="my-5 text-lg text-center">Dive into the core concepts and skills needed to become a successful programmer.</p>
 
             <div class="w-10/12 mx-auto">
                 <ul class="grid mt-6 mb-6 gap-x-1 lg:grid-cols-6 gap-y-20 sm:grid-cols-2">
                     {% for topico in topicos %}
-                        <li class="flex flex-row items-center h-24 px-2 mt-10 hover:underline">
+                        <li class="flex flex-row items-center h-24 px-2 mt-10">
                             <div class="justify-between w-56 transition duration-300 transform bg-white rounded-lg shadow-lg hover:scale-110 hover:shadow-xl min-h-52">
                                 <div class="flex items-center justify-center m-2 mx-auto rounded-lg bg-gradient-to-br from-rose-100 via-purple-200 to-purple-200 h-3/6">
                                     <img class="w-20 h-20" src="{{ topico.icon_topico.url }}" alt="">
@@ -36,11 +38,9 @@
                 
                                 <div class="flex flex-col px-5 pt-2">
                                     <h2 class="font-semibold text-black">{{ topico.nome_topico }}</h2>
-                                    <a href="{% url 'exibir_topico' topico.id %}">
-                                        <button class="fixed px-2 py-1 mt-2 text-white transition duration-150 bg-blue-500 rounded-md cursor-pointer hover:bg-blue-700" type="button">
-                                            Saiba mais
-                                        </button>
-                                    </a>
+                                    <button class="flex w-full px-2 py-1 mx-auto mt-2 text-center text-white transition duration-150 bg-blue-500 rounded-md cursor-pointer hover:bg-blue-700" type="button">
+                                        <a class="flex mx-auto text-center" href="{% url 'exibir_topico' topico.id %}">Explore</a>
+                                    </button>
                                 </div>
                             </div>
                         </li>
@@ -49,7 +49,7 @@
             </div>
         </section>
 
-        <section id="contact" class="relative w-4/5 mx-auto bg-gray-700 sm:pt-20 rounded-3xl 2xl:pt-40">
+        <section id="contact" class="relative w-10/12 mx-auto bg-gray-700 sm:pt-20 rounded-3xl 2xl:pt-40">
             
             <div class="absolute top-0 right-0 hidden w-1/2 h-full bg-gray-600 border-2 rounded-3xl lg:block"></div>
 
