--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -8,7 +8,7 @@
     
     {% block content %}
 
-        <div class="flex items-center w-10/12 mx-auto mt-10 lg:flex-row sm:flex-col">
+        <div id="hero" class="flex items-center w-10/12 mx-auto mt-10 lg:flex-row sm:flex-col">
             <div class="flex flex-col w-1/3 mx-10 mb-16 sm:w-4/5">
                 <h1 class="text-4xl font-medium">Desbloqueie seu potencial de programação!</h1>
                 <p class="mt-2 mb-auto text-lg text-left text-wrap">Explore os fundamentos da programação e inicie sua jornada dentro da indústria tech.</p>
@@ -23,7 +23,7 @@
             <img class="w-1/2 h-auto rounded-xl" src="../img/Webinar-rafiki.png" alt="aprendiz de programação">
         </div>
 
-        <section id="topics" class="py-20 mx-auto">
+        <section id="topic" class="py-20 mx-auto">
             <h2 class="my-5 text-4xl font-medium text-center">Explore programming topics</h2>
             <p class="my-5 text-lg text-center">Dive into the core concepts and skills needed to become a successful programmer.</p>
 
