--- a/class01/home/templates/topico.html
+++ b/class01/home/templates/topico.html
@@ -9,51 +9,53 @@
     
     {% block content %}
 
-        <h1 class="text-5xl font-bold text-center my-9">{{ current_topic.nome_topico }}</h1>
+        <h1 class="text-5xl font-semibold text-center my-9"><span class="border-b-2 border-white">{{ current_topic.nome_topico }}</span></h1>
 
-        <p class="w-1/2 mx-auto mb-4">{{ current_topic.introducao }}</p>
+        <img class="w-3/4 mx-auto mb-6 rounded-2xl" src="{{ current_topic.imagem.url }}" alt="{{ current_topic.nome_topico }}">
 
-        <img class="w-1/2 mx-auto mb-6 rounded-2xl" src="{{ current_topic.imagem.url }}" alt="{{ current_topic.nome_topico }}">
+        <p class="w-11/12 mx-auto mb-8 text-lg">{{ current_topic.introducao }}</p>
 
         <div class="flex justify-center my-5">
-            <a target="_blank" href="{{ current_topic.fonte }}">
-                <button class="px-4 py-2 overflow-hidden font-medium text-blue-400 duration-300 bg-black border border-b-4 border-blue-400 rounded-md outline-none hover:brightness-150 hover:border-t-4 hover:border-b active:opacity-75 group">
-                    <span class="bg-blue-400 shadow-blue-400 absolute -top-[150%] left-0 inline-flex w-80 h-[5px] rounded-md opacity-50 group-hover:top-[150%] duration-500 shadow-[0_0_10px_10px_rgba(0,0,0,0.3)]"></span>
-                    Veja mais sobre {{ current_topic.nome_topico }}
-                </button>
+            <a href="{{ current_topic.fonte }}">
+                <button type="submit" class="px-5 py-3 text-base font-medium text-center text-white transition duration-300 bg-blue-700 rounded-lg hover:bg-blue-100 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-700 dark:hover:bg-white dark:hover:text-blue-700 dark:focus:ring-blue-800">Veja mais sobre {{ current_topic.nome_topico }}</button>
             </a>
         </div>
 
-        <p class="w-1/2 mx-auto mb-4">{{ current_topic.texto_ferramenta }}</p>
-        
-        <div class="flex justify-center mb-5">
-            <a href="{{ current_topic.fonte_ferramenta }}" target="_blank">
-                <button class="px-4 py-2 overflow-hidden font-medium text-blue-400 duration-300 bg-black border border-b-4 border-blue-400 rounded-md outline-none hover:brightness-150 hover:border-t-4 hover:border-b active:opacity-75 group">
-                    <span class="bg-blue-400 shadow-blue-400 absolute -top-[150%] left-0 inline-flex w-80 h-[5px] rounded-md opacity-50 group-hover:top-[150%] duration-500 shadow-[0_0_10px_10px_rgba(0,0,0,0.3)]"></span>
-                    Veja mais sobre as principais ferramentas
-                </button>
-            </a>
+        <div class="w-full py-10 mt-8 bg-gray-900 rounded-tl-2xl rounded-tr-2xl">
+            <h2 class="text-4xl font-medium text-center mb-9">Principais ferramentas para <span class="text-blue-500 border-b-2 border-white">{{ current_topic.nome_topico }}</span></h2>
+
+            <p class="w-11/12 mx-auto mb-4 text-lg">{{ current_topic.texto_ferramenta }}</p>
         </div>
 
-        {% for ferramenta in ferramentas %}
-        <div class="px-4 py-8 mx-auto mb-8 bg-slate-700 rounded-3xl sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
-            <div class="flex flex-col items-center justify-between w-full mb-10 lg:flex-row">
-                <div class="mb-16 lg:mb-0 lg:max-w-lg lg:pr-5">
-                    <div class="max-w-xl mb-6">
-                  
-                        <h2 class="max-w-lg mt-6 mb-6 font-sans text-3xl font-medium tracking-tight text-white sm:mt-0 sm:text-4xl sm:leading-none">{{ ferramenta.nome_ferramenta }}</h2>
-                        <p class="w-10/12 text-base text-white md:text-lg">{{ ferramenta.informacao_ferramenta }}</p>
-                    </div>
-                    <div className='space-x-4'>
-                        <button class="inline-flex items-center text-lg font-medium text-neutral-400">
-                            <span> get insights →</span>
-                        </button>
+        <div class="w-full bg-gray-900 py-7">
+            {% for ferramenta in ferramentas %}
+                <div class="px-4 py-8 mx-auto mb-8 bg-slate-700 rounded-3xl sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
+                    <div class="flex flex-col items-center justify-between w-full mb-10 lg:flex-row">
+                        <div class="mb-16 lg:mb-0 lg:max-w-lg lg:pr-5">
+                            <div class="max-w-xl mb-6">
+                        
+                                <h2 class="max-w-lg mt-6 mb-6 font-sans text-3xl font-medium tracking-tight text-white sm:mt-0 sm:text-4xl sm:leading-none">{{ ferramenta.nome_ferramenta }}</h2>
+                                <p class="w-10/12 text-base text-white md:text-lg">{{ ferramenta.informacao_ferramenta }}</p>
+                            </div>
+                            <div className='space-x-4'>
+                                <button class="inline-flex items-center text-lg font-medium text-neutral-400">
+                                    <span> get insights →</span>
+                                </button>
+                            </div>
+                        </div>
+                        <img alt="logo" width="750" height="750" src="{{ ferramenta.imagem_ferramenta.url }}" />
                     </div>
                 </div>
-                <img alt="logo" width="750" height="750" src="{{ ferramenta.imagem_ferramenta.url }}" />
+            {% endfor %}
+
+            <div class="flex justify-center mb-5">
+                <a href="{{ current_topic.fonte_ferramenta }}">
+                    <button type="submit" class="px-5 py-3 text-base font-medium text-center text-white transition duration-300 bg-blue-700 rounded-lg hover:bg-blue-100 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-700 dark:hover:bg-white dark:hover:text-blue-700 dark:focus:ring-blue-800">Veja mais sobre as principais ferramentas de {{ current_topic.nome_topico }}</button>
+                </a>
             </div>
         </div>
-        {% endfor %}
+
+        
 
         {% include 'pagination.html' %}
 
