--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -20,7 +20,7 @@
                         <button type="submit" class="px-5 py-3 mt-5 text-base font-medium text-center text-blue-700 transition duration-300 bg-white rounded-lg hover:bg-blue-100 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-white dark:hover:bg-blue-700 dark:hover:text-white dark:focus:ring-blue-800">Comece agora</button>
                     </a>
 
-                    <a href="#contact">
+                    <a href="#section3">
                         <button type="submit" class="px-5 py-3 mt-5 ml-5 text-base font-medium text-center text-white transition duration-300 bg-blue-700 rounded-lg hover:bg-blue-100 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-700 dark:hover:bg-white dark:hover:text-blue-700 dark:focus:ring-blue-800">Fale conosco</button>
                     </a>
                     
