--- a/class01/home/templates/topico.html
+++ b/class01/home/templates/topico.html
@@ -38,9 +38,9 @@
                                 <p class="w-10/12 text-base text-white md:text-lg">{{ ferramenta.informacao_ferramenta }}</p>
                             </div>
                             <div className='space-x-4'>
-                                <button class="inline-flex items-center text-lg font-medium text-neutral-400">
-                                    <span> get insights →</span>
-                                </button>
+                                <a href="{{ ferramenta.link_ferramenta }}" target="_blank">
+                                    <button class="inline-flex items-center p-2 text-lg font-medium transition duration-300 border-2 border-neutral-300 hover:border-neutral-400 rounded-xl text-neutral-300 hover:text-neutral-400">Conheça →</button> 
+                                </a>
                             </div>
                         </div>
                         <img alt="logo" width="750" height="750" src="{{ ferramenta.imagem_ferramenta.url }}" />
