feat: Criação de arquivos estáticos para animações nas páginas  - base.html: Adicionado os cdns e chamando o script com as animações   - settings.py: configuração do caminho dos arquivos estáticos    - Demais arquivos: configuração das animações

--- a/class01/class01/templates/base.html
+++ b/class01/class01/templates/base.html
@@ -11,8 +11,6 @@
 
 <body class="leading-normal tracking-normal text-white bg-slate-800">
     
-
-
 <nav class="sticky top-0 z-20 w-full bg-white border-b border-gray-200 dark:bg-gray-900 start-0 dark:border-gray-600">
   <div class="flex flex-wrap items-center justify-between max-w-screen-xl p-4 mx-auto">
   <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
@@ -59,7 +57,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+
 <script src="{% static 'js/script.js' %}"></script>
+
 
 </body>
 </html>
