--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -72,19 +72,19 @@
                                         <h2 class="mt-10 mb-16 text-5xl font-bold text-white font-heading">Fale conosco</h2>
                                         <div class="px-8 py-6 mb-4 bg-gray-600 rounded-lg">
                                             <div class="flex items-center">
-                                                <span class="flex items-center justify-center w-12 h-12 mr-8 bg-blue-500 rounded-lg"><ion-icon class="w-4 h-4" name="call"></ion-icon></span>
+                                                <span class="flex items-center justify-center mr-8 bg-blue-500 rounded-lg min-w-12 min-h-12"><ion-icon class="w-4 h-4" name="call"></ion-icon></span>
                                                 <p class="text-lg font-bold text-white">(38) 99231-1967</p>
                                             </div>
                                         </div>
                                         <div class="px-8 py-6 mb-4 bg-gray-600 rounded-lg">
                                             <div class="flex items-center">
-                                                <span class="flex items-center justify-center w-12 h-12 mr-8 bg-blue-500 rounded-lg"><ion-icon class="w-4 h-4" name="mail"></ion-icon></span>
+                                                <span class="flex items-center justify-center mr-8 bg-blue-500 rounded-lg min-w-12 min-h-12"><ion-icon class="w-4 h-4" name="mail"></ion-icon></span>
                                                 <p class="text-lg font-bold text-white">arthur.devti@gmail.com</p>
                                             </div>
                                         </div>
                                         <div class="px-8 py-6 mb-4 bg-gray-600 rounded-lg">
                                             <div class="flex items-center">
-                                                <span class="flex items-center justify-center w-12 h-12 mr-8 bg-blue-500 rounded-lg"><ion-icon class="w-4 h-4" name="location"></ion-icon></span>
+                                                <span class="flex items-center justify-center mr-8 bg-blue-500 rounded-lg min-w-12 min-h-12"><ion-icon class="w-4 h-4" name="location"></ion-icon></span>
                                                 <p class="text-lg font-bold text-white">Curvelo - MG</p>
                                             </div>
                                         </div>
