--- a/class01/home/templates/topico.html
+++ b/class01/home/templates/topico.html
@@ -16,7 +16,7 @@
         <p class="w-11/12 mx-auto mb-8 text-lg">{{ current_topic.introducao }}</p>
 
         <div class="flex justify-center my-5">
-            <a href="{{ current_topic.fonte }}">
+            <a href="{{ current_topic.fonte }}" target="_blank">
                 <button type="submit" class="px-5 py-3 text-base font-medium text-center text-white transition duration-300 bg-blue-700 rounded-lg hover:bg-blue-100 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-700 dark:hover:bg-white dark:hover:text-blue-700 dark:focus:ring-blue-800">Veja mais sobre {{ current_topic.nome_topico }}</button>
             </a>
         </div>
@@ -49,8 +49,8 @@
             {% endfor %}
 
             <div class="flex justify-center mb-5">
-                <a href="{{ current_topic.fonte_ferramenta }}">
-                    <button type="submit" class="px-5 py-3 text-base font-medium text-center text-white transition duration-300 bg-blue-700 rounded-lg hover:bg-blue-100 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-700 dark:hover:bg-white dark:hover:text-blue-700 dark:focus:ring-blue-800">Veja mais sobre as principais ferramentas de {{ current_topic.nome_topico }}</button>
+                <a href="{{ current_topic.fonte_ferramenta }}" target="_blank">
+                    <button type="submit" class="flex w-11/12 px-5 py-3 mx-auto text-base font-medium text-center text-white transition duration-300 bg-blue-700 rounded-lg hover:bg-blue-100 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-700 dark:hover:bg-white dark:hover:text-blue-700 dark:focus:ring-blue-800">Veja mais sobre as principais ferramentas de {{ current_topic.nome_topico }}</button>
                 </a>
             </div>
         </div>
