--- a/class01/class01/templates/base.html
+++ b/class01/class01/templates/base.html
@@ -9,7 +9,7 @@
     {% tailwind_css %}
   </head>
 
-<body class="leading-normal tracking-normal text-white bg-slate-800">
+<body class="leading-normal tracking-normal text-white bg-slate-800 font-poppins">
     
 <nav class="sticky top-0 z-20 w-full bg-white border-b border-gray-200 dark:bg-gray-900 start-0 dark:border-gray-600">
   <div class="flex flex-wrap items-center justify-between max-w-screen-xl p-4 mx-auto">
