--- a/class01/class01/templates/base.html
+++ b/class01/class01/templates/base.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="shortcut icon" href="{% static 'img/logo.icon1.png' %}" type="image/x-icon">
     {% tailwind_css %}
   </head>
 
@@ -14,8 +15,8 @@
 <nav class="sticky top-0 z-20 w-full bg-white border-b border-gray-200 dark:bg-gray-900 start-0 dark:border-gray-600">
   <div class="flex flex-wrap items-center justify-between max-w-screen-xl p-4 mx-auto">
   <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo">
-      <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Class01</span>
+      <img src={% static 'img/logo.icon1.png' %} class="h-8" alt="Flowbite Logo">
+      <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Class<span class="text-blue-600">01</span></span>
   </a>
   <div class="flex space-x-3 md:order-2 md:space-x-0 rtl:space-x-reverse">
     {% if request.path == '/' %}  
