feat: Alterações nas imagens do navbar

--- a/class01/class01/templates/base.html
+++ b/class01/class01/templates/base.html
@@ -15,7 +15,7 @@
 <nav class="sticky top-0 z-20 w-full bg-white border-b border-gray-200 dark:bg-gray-900 start-0 dark:border-gray-600">
   <div class="flex flex-wrap items-center justify-between max-w-screen-xl p-4 mx-auto">
   <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <img src={% static 'img/logo.icon1.png' %} class="h-8" alt="Flowbite Logo">
+      <img src={% static 'img/logo.png' %} class="h-10" alt="Flowbite Logo">
       <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Class<span class="text-blue-600">01</span></span>
   </a>
   <div class="flex space-x-3 md:order-2 md:space-x-0 rtl:space-x-reverse">
@@ -51,7 +51,7 @@
 
 <footer class="m-4 bg-white rounded-lg shadow dark:bg-slate-900">
   <div class="w-full max-w-screen-xl p-4 mx-auto md:flex md:items-center md:justify-between">
-    <span class="mx-auto text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 <a href="#hero" class="hover:underline">Class01™</a>. All Rights Reserved.</span>
+    <span class="mx-auto text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 <a href="#hero" class="hover:underline">Class01™</a>. All Rights Reserved. Developed by Arthur Rodrigues</span>
   </div>
 </footer>
 
@@ -60,6 +60,8 @@
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+
+<script type='text/javascript'>document.addEventListener('DOMContentLoaded', function () {window.setTimeout(document.querySelector('svg').classList.add('animated'),3000);})</script>
 
 <script src="{% static 'js/script.js' %}"></script>
 
