--- a/class01/class01/templates/base.html
+++ b/class01/class01/templates/base.html
@@ -21,7 +21,7 @@
   <div class="flex space-x-3 md:order-2 md:space-x-0 rtl:space-x-reverse">
     {% if request.path == '/' %}  
       <a href="{% url 'exibir_topico' 1 %}"><button type="button" class="px-4 py-2 text-sm font-medium text-center text-white transition duration-300 bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-700 dark:hover:bg-white dark:hover:text-blue-700 dark:focus:ring-blue-800">Comece agora</button></a>
-    {% else %}
+    {% elif next_topic %}
       <a href="{% url 'exibir_topico' next_topic.id %}"><button type="button" class="px-4 py-2 text-sm font-medium text-center text-white transition duration-300 bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-700 dark:hover:bg-white dark:hover:text-blue-700 dark:focus:ring-blue-800">Próximo tópico</button></a>
     {% endif %}
       <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center justify-center w-10 h-10 p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-sticky" aria-expanded="false">
@@ -41,6 +41,9 @@
       </li>
       <li>
         <a href="/#section3" class="block px-3 py-2 text-gray-900 rounded nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contact</a>
+      </li>
+      <li>
+        <a href="/#section4" class="block px-3 py-2 text-gray-900 rounded nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">About</a>
       </li>
     </ul>
   </div>
