--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -8,9 +8,9 @@
     
     {% block content %}
 
-        <section id="section1" class="flex items-center w-full mx-auto bg-gray-900 lg:flex-row flex-col">
+        <section id="section1" class="flex flex-col items-center w-full mx-auto bg-gray-900 lg:flex-row">
             <div id="text-home" class="flex flex-col mx-10 mb-16 lg:w-1/2 xs:w-4/5">
-                <div class="flex xs:w-full flex-col">
+                <div class="flex flex-col xs:w-full">
                     <h1 class="text-4xl font-medium">Desbloqueie seu potencial de programação!</h1>
                     <p class="mt-4 mb-2 text-lg text-left text-wrap">Explore os fundamentos da programação e inicie sua jornada dentro da indústria tech.</p>
                 </div>
@@ -69,25 +69,25 @@
                     <div class="max-w-5xl mx-auto">
                         <div class="flex flex-wrap -mx-4">
                             <div class="relative w-full px-4 pb-20 overflow-hidden lg:w-1/2">
-                                <div class="md:mx-auto md:flex md:flex-col relative max-w-md">
+                                <div class="relative max-w-md md:mx-auto md:flex md:flex-col">
                                     <div class="pb-16 mb-8 border-b border-gray-400">
                                         <p class="text-lg font-bold text-blue-400">Tem uma dúvida?</p>
                                         <h2 class="mt-10 mb-16 text-5xl font-bold text-white font-heading">Fale conosco</h2>
                                         <div class="px-8 py-6 mb-4 bg-gray-600 rounded-lg">
                                             <div class="flex items-center">
-                                                <span class="flex items-center justify-center mr-8 xs:mr-4 bg-blue-500 rounded-lg min-w-12 min-h-12"><ion-icon class="w-4 h-4" name="call"></ion-icon></span>
+                                                <span class="flex items-center justify-center mr-8 bg-blue-500 rounded-lg xs:mr-4 min-w-12 min-h-12"><ion-icon class="w-4 h-4" name="call"></ion-icon></span>
                                                 <p class="text-lg font-bold text-white">(38) 99231-1967</p>
                                             </div>
                                         </div>
                                         <div class="px-8 py-6 mb-4 bg-gray-600 rounded-lg">
                                             <div class="flex items-center">
-                                                <span class="flex items-center justify-center mr-8 xs:mr-4 bg-blue-500 rounded-lg min-w-12 min-h-12"><ion-icon class="w-4 h-4" name="mail"></ion-icon></span>
+                                                <span class="flex items-center justify-center mr-8 bg-blue-500 rounded-lg xs:mr-4 min-w-12 min-h-12"><ion-icon class="w-4 h-4" name="mail"></ion-icon></span>
                                                 <p class="text-lg font-bold text-white">arthur.devti@gmail.com</p>
                                             </div>
                                         </div>
                                         <div class="px-8 py-6 mb-4 bg-gray-600 rounded-lg">
                                             <div class="flex items-center">
-                                                <span class="flex items-center justify-center mr-8 xs:mr-4 bg-blue-500 rounded-lg min-w-12 min-h-12"><ion-icon class="w-4 h-4" name="location"></ion-icon></span>
+                                                <span class="flex items-center justify-center mr-8 bg-blue-500 rounded-lg xs:mr-4 min-w-12 min-h-12"><ion-icon class="w-4 h-4" name="location"></ion-icon></span>
                                                 <p class="text-lg font-bold text-white">Curvelo - MG</p>
                                             </div>
                                         </div>
@@ -101,7 +101,7 @@
                             </div>
 
                             <div class="relative w-full px-4 pb-20 lg:w-1/2">
-                                <div class="md:mx-auto md:flex md:flex-col max-w-md lg:ml-20">
+                                <div class="max-w-md md:mx-auto md:flex md:flex-col lg:ml-20">
                                     <form method="post">
                                         {% csrf_token %}
                                         <h3 class="mb-10 text-2xl font-bold text-white">Envie uma mensagem</h3>
@@ -162,6 +162,45 @@
                     </div>
                 </div>
             
+            </div>
+        </section>
+
+        <section id="section4" class="flex flex-col w-full mx-auto mt-10 rounded-tl-2xl bg-slate-900">
+            <div class="flex flex-col min-h-auto bg-slate-900">
+                <div class="py-12 bg-slate-900 md:py-24 lg:py-32">
+                    <div class="container grid gap-8 px-4 mx-auto md:px-6 md:grid-cols-2">
+                        <div class="space-y-4">
+                            <h2 class="text-3xl font-bold text-gray-200 md:text-4xl">About Us</h2>
+                            <p class="text-gray-200 md:text-xl">Learn more about our mission and values.</p>
+                            <div class="space-y-4">
+                                <div class="flex items-start gap-4">
+                                    <img class="w-6 h-6 text-gray-200" src="{% static 'img/book-svgrepo-com.png' %}" alt="">
+                                    <div>
+                                        <h4 class="font-semibold text-gray-200">Our Mission</h4>
+                                        <p class="text-gray-200">To provide high-quality educational resources and support for learners of all levels.</p>
+                                    </div>
+                                </div>
+                                <div class="flex items-start gap-4">
+                                    <img class="w-6 h-6 text-gray-200" src="{% static 'img/lamp-svgrepo-com.png' %}" alt="">
+                                    <div>
+                                        <h4 class="font-semibold text-gray-200">Our Values</h4>
+                                        <p class="text-gray-200">Commitment to excellence, innovation, and accessibility.</p>
+                                    </div>
+                                </div>
+                                <div class="flex items-start gap-4">
+                                    <img class="w-6 h-6 text-gray-200" src="{% static 'img/team-svgrepo-com.png' %}" alt="">
+                                    <div>
+                                        <h4 class="font-semibold text-gray-200">Our Team</h4>
+                                        <p class="text-gray-200">A dedicated group of educators</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="">
+                            <img src="{% static 'img/benjamin-unsplash.jpg' %}" alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
