--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -65,7 +65,7 @@
                 <div class="absolute top-0 right-0 hidden w-1/2 h-full bg-gray-600 border-2 rounded-3xl lg:block"></div>
 
                 <div class="container px-4">
-                    <div class="max-w-5xl">
+                    <div class="max-w-5xl mx-auto">
                         <div class="flex flex-wrap -mx-4">
                             <div class="relative w-full px-4 pb-20 overflow-hidden lg:w-1/2">
                                 <div class="relative max-w-md mx-auto">
