--- a/class01/class01/templates/base.html
+++ b/class01/class01/templates/base.html
@@ -70,6 +70,7 @@
 <script src="https://unpkg.com/htmx.org@2.0.2"></script>
 
 <script src="{% static 'js/highlight.js' %}"></script>
+<script src="{% static 'js/carousel.js' %}"></script>
 <script src="{% static 'js/animation.js' %}"></script>
 
 <div vw class="enabled">
