--- a/class01/class01/templates/base.html
+++ b/class01/class01/templates/base.html
@@ -22,7 +22,7 @@
         <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Class<span class="text-blue-600">01</span></span>
     </a>
     <div class="flex space-x-3 md:order-2 md:space-x-0 rtl:space-x-reverse">
-      {% if request.path == '/' %}  
+      {% if request.path == '/' or request.path == '/all-topics/' %}  
         <a href="{% url 'exibir_topico' 1 %}"><button type="button" class="px-4 py-2 text-sm font-medium text-center text-white transition duration-300 bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-700 dark:hover:bg-white dark:hover:text-blue-700 dark:focus:ring-blue-800">Comece agora</button></a>
       {% elif next_topic %}
         <a href="{% url 'exibir_topico' next_topic.id %}"><button type="button" class="px-4 py-2 text-sm font-medium text-center text-white transition duration-300 bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-700 dark:hover:bg-white dark:hover:text-blue-700 dark:focus:ring-blue-800">Próximo tópico</button></a>
