--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -57,6 +57,12 @@
                     {% endfor %}
                 </ul>
             </div>
+
+            <div class="flex mx-auto mt-16">
+                <a href="{% url 'all_topics' %}">
+                    <button class="px-4 py-2 mx-auto font-medium text-white transition bg-blue-700 rounded-lg hover:bg-white hover:text-blue-700 durantion-300">Ver todos os tópicos</button>
+                </a>
+            </div>
         </section>
 
         <section id="section3" class="flex">
