style: Alteração das cores dos ícones da área de contatos

--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -52,7 +52,7 @@
                     {% for topico in topicos %}
                         <li class="flex flex-row items-center h-24 px-2 mt-12">
                             <div class="justify-between w-56 transition duration-300 transform border-2 border-gray-900 shadow-lg opacity-0 bg-gray-50 dark:bg-gray-900 rounded-xl card hover:scale-110 hover:shadow-xl min-h-52">
-                                <div class="flex items-center justify-center mx-auto my-auto rounded-xl bg-gradient-to-br from-cyan-200 via-cyan-400">
+                                <div class="flex items-center justify-center mx-auto my-auto rounded-xl bg-gradient-to-br from-sky-200 via-sky-400">
                                     <img class="w-20 h-20" src="{{ topico.icon_topico.url }}" alt="" title="{{ topico.nome_topico }}">
                                 </div>
                 
@@ -90,20 +90,20 @@
                                         <h2 class="mt-10 mb-16 text-5xl font-bold text-gray-800 dark:text-white font-heading">Fale conosco</h2>
                                         <div class="px-8 py-6 mb-4 bg-gray-400 rounded-lg dark:bg-gray-600">
                                             <div class="flex items-center">
-                                                <span class="flex items-center justify-center mr-2 bg-blue-600 rounded-lg min-w-12 min-h-12"><ion-icon class="w-4 h-4" name="call"></ion-icon></span>
+                                                <span class="flex items-center justify-center mr-2 text-white bg-blue-600 rounded-lg min-w-12 min-h-12"><ion-icon class="w-4 h-4" name="call"></ion-icon></span>
                                                 <p class="text-lg font-bold text-gray-800 dark:text-white">(38)99231-1967</p>
                                             </div>
                                         </div>
                                         <div class="px-8 py-6 mb-4 bg-gray-400 rounded-lg dark:bg-gray-600">
                                             <div class="flex items-center">
-                                                <span class="flex items-center justify-center mr-2 bg-blue-600 rounded-lg min-w-12 min-h-12"><ion-icon class="w-4 h-4" name="mail"></ion-icon></span>
+                                                <span class="flex items-center justify-center mr-2 text-white bg-blue-600 rounded-lg min-w-12 min-h-12"><ion-icon class="w-4 h-4" name="mail"></ion-icon></span>
                                                 <p class="flex text-lg font-bold text-gray-800 dark:text-white">arthur.devti@gmail.com</p>
                                             </div>
                                         </div>
                                         <div class="px-8 py-6 mb-4 bg-gray-400 rounded-lg dark:bg-gray-600">
                                             <div class="flex items-center">
                                                 <a href="https://maps.app.goo.gl/xJWpThG58gFkztvV6" target="_blank">
-                                                <span class="flex items-center justify-center mr-2 bg-blue-600 rounded-lg min-w-12 min-h-12"><ion-icon class="w-4 h-4" name="location"></ion-icon></span>
+                                                <span class="flex items-center justify-center mr-2 text-white bg-blue-600 rounded-lg min-w-12 min-h-12"><ion-icon class="w-4 h-4" name="location"></ion-icon></span>
                                             </a>
                                                 <p class="text-lg font-bold text-gray-800 dark:text-white">Curvelo - MG</p>
                                             </div>
