--- a/class01/home/templates/all_topics.html
+++ b/class01/home/templates/all_topics.html
@@ -9,7 +9,7 @@
     {% block content %}
 
     <div class="flex w-full h-16">
-        <h2 class="mx-auto my-auto text-4xl">Todos os tópicos disponíveis</h2>
+        <h2 class="mx-auto my-auto text-4xl text-gray-900 dark:text-white">Todos os tópicos disponíveis</h2>
     </div>
 
     <div class="flex w-full mx-auto my-10">
