feat: Otimização no script de alteração de tema

--- a/class01/class01/templates/base.html
+++ b/class01/class01/templates/base.html
@@ -34,7 +34,7 @@
       </div>
       <!-- Botão de tema -->
       <div class="md:order-3">
-        <button id="theme-toggle"
+        <button onclick="document.documentElement.classList.toggle('dark')"
           class="w-12 h-12 p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
           <svg class="block fill-violet-700 dark:hidden" fill="currentColor" viewBox="0 0 20 20">
               <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path>
